--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>일정관리 앱으로 학습하는 테스트 코드</title>
-</head>
-<body class="bg-gray-100 p-8">
-<div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=cycle"
+    />
+    <title>일정관리 앱으로 학습하는 테스트 코드</title>
+  </head>
+  <body class="bg-gray-100 p-8">
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
